add privacy policy file

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,14 @@
             </div>
             <div class="offset-md-7 col-md-3">
               <div class="promo__privacy">
-                <a href="#" class="link">Privacy Policy</a>
+                <a
+                  rel="noopener"
+                  href="./privacy-policy/PERSONAL_DATA_PROTECTION_POLICY.pdf"
+                  class="link"
+                  target="_blank"
+                >
+                  Privacy Policy
+                </a>
               </div>
             </div>
           </div>
@@ -901,7 +908,7 @@
                 </svg>
               </a>
               <a
-                href="https://www.facebook.com/preplycompany/"
+                href="https://www.facebook.com/preplyENsp/?brand_redir=356077031093007"
                 class="footer__sociall footer__sociall--facebook"
                 title="Our Facebook"
               >
@@ -928,7 +935,7 @@
                 </svg>
               </a>
               <a
-                href="https://www.youtube.com/channel/UCyDXMl-ru1F--NPCtO7aDig?feature=emb_ch_name_ex"
+                href="https://www.youtube.com/user/preplysite"
                 class="footer__sociall footer__sociall--youtube"
                 title="Our Youtube channel"
               >
@@ -951,7 +958,14 @@
           </div>
           <div class="col-12 offset-md-4 col-md-3">
             <div class="footer__privacy">
-              <a href="#" class="link">Privacy Policy</a>
+              <a
+                rel="noopener"
+                href="./privacy-policy/PERSONAL_DATA_PROTECTION_POLICY.pdf"
+                class="link"
+                target="_blank"
+              >
+                Privacy Policy
+              </a>
             </div>
           </div>
         </div>
