--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@
             </p>
           </div>
 
-          <div class="col-6 col-xl-4 px-1 px-lg-2 order-1 order-xl-1">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 mb-2 mb-lg-3 order-1 order-xl-1">
             <div
               class="what-we-value__value value value--customer js-scroll__element scroll"
               data-hover="content"
@@ -250,7 +250,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 px-1 px-lg-2 order-2 order-xl-2">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 mb-2 mb-lg-3 order-2 order-xl-2">
             <div
               class="what-we-value__value value value--human js-scroll__element scroll"
               data-hover="content"
@@ -280,7 +280,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 px-1 px-lg-2 order-5 order-xl-3">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 mb-2 mb-lg-3 order-5 order-xl-3">
             <div
               class="what-we-value__value value value--hackers js-scroll__element scroll"
               data-hover="content"
@@ -310,7 +310,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 px-1 px-lg-2 order-3 order-xl-4">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 mb-2 mb-lg-3 order-3 order-xl-4">
             <div
               class="what-we-value__value value value--hungry js-scroll__element scroll"
               data-hover="content"
@@ -340,7 +340,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 px-1 px-lg-2 order-4 order-xl-5">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 mb-2 mb-lg-3 order-4 order-xl-5">
             <div
               class="what-we-value__value value value--humble js-scroll__element scroll"
               data-hover="content"
@@ -370,7 +370,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 px-1 px-lg-2 order-6 order-xl-6">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 mb-2 mb-lg-3 order-6 order-xl-6">
             <div
               class="what-we-value__value value value--curious js-scroll__element scroll"
               data-hover="content"
