separate boottrap from classes

--- a/src/index.html
+++ b/src/index.html
@@ -110,14 +110,16 @@
     <section class="slogan slogan--green js-scroll js-background">
       <div class="container">
         <div class="row slogan__wrapper">
-          <div class="slogan__text col-xl-7 col-lg-12">
-            <h2 class="slogan__title js-scroll__element scroll">
-              Language is a powerful magic
-            </h2>
+          <div class="col-xl-7 col-lg-12">
+            <div class="slogan__text">
+              <h2 class="slogan__title js-scroll__element scroll">
+                Language is a powerful magic
+              </h2>
 
-            <p class="slogan__description js-scroll__element scroll">
-              It helps people develop professionally, brings families closer and much more. We’re creating a digital space for learners and tutors to shape the future of truly effective learning.
-            </p>
+              <p class="slogan__description js-scroll__element scroll">
+                It helps people develop professionally, brings families closer and much more. We’re creating a digital space for learners and tutors to shape the future of truly effective learning.
+              </p>
+            </div>
           </div>
 
           <img
@@ -406,14 +408,17 @@
     <section class="slogan slogan--red js-scroll js-background">
       <div class="container">
         <div class="row slogan__wrapper">
-          <div class="slogan__text col-xl-5 col-lg-12">
-            <h2 class="slogan__title js-scroll__element scroll">
-              Work with us
-            </h2>
 
-            <p class="slogan__description js-scroll__element scroll">
-              Together we’ll change the world of online learning. Want to be a Prepler? Find your role.
-            </p>
+          <div class="col-xl-5 col-lg-12">
+            <div class="slogan__text">
+              <h2 class="slogan__title js-scroll__element scroll">
+                Work with us
+              </h2>
+
+              <p class="slogan__description js-scroll__element scroll">
+                Together we’ll change the world of online learning. Want to be a Prepler? Find your role.
+              </p>
+            </div>
           </div>
 
           <img
@@ -857,33 +862,38 @@
       </div>
     </section>
 
-    <section class="shape_of_future slogan slogan--green js-scroll js-background">
+    <section class="slogan slogan--green js-scroll js-background">
       <div class="container">
         <div class="row slogan__wrapper">
-          <div class="slogan__text col-xl-5 col-lg-12">
-            <h2 class="slogan__title js-scroll__element scroll">
-              Shape the future <br> of effective learning
-            </h2>
+          <div class="col-xl-4 col-lg-12">
+            <div class="slogan__text">
+              <h2 class="slogan__title js-scroll__element scroll">
+                Shape the future <br> of effective learning
+              </h2>
 
-            <div class="js-scroll__element scroll">
-              <a
-                href="#vacancies"
-                class="button button--light slogan__btn"
-              >
-                Browse open positions
-              </a>
+              <div class="js-scroll__element scroll">
+                <a
+                  href="#vacancies"
+                  class="button button--light slogan__btn"
+                >
+                  Browse open positions
+                </a>
+              </div>
             </div>
           </div>
 
-          <img
-            src="./images/slogan/slogan_3.svg"
-            alt="learning"
-            loading="lazy"
-            class="slogan__img slogan__img--center offset-xl-1 col-xl-5 col-lg-12 js-scroll__element scroll"
-          >
+          <div class="offset-xl-2 col-xl-5 col-lg-12">
+            <img
+              src="./images/slogan/slogan_3.svg"
+              alt="learning"
+              loading="lazy"
+              class="slogan__img js-scroll__element scroll"
+            >
+          </div>
         </div>
       </div>
     </section>
+
     <footer class="footer">
       <div class="container">
         <div class="row footer__top">
