--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
               <div class="promo__privacy">
                 <a
                   rel="noopener"
-                  href="./privacy-policy/PERSONAL_DATA_PROTECTION_POLICY.pdf"
+                  href="./files/PERSONAL_DATA_PROTECTION_POLICY.pdf"
                   class="link"
                   target="_blank"
                 >
@@ -53,7 +53,11 @@
               </div>
             </div>
           </div>
-          <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--big">
+          <a
+            href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm"
+            class="promo__glassdoor promo__glassdoor--big"
+            title="Review on Glassdoor"
+          >
             <svg
               viewBox="0 0 248 167"
               fill="currentColor"
@@ -81,7 +85,11 @@
               </div>
             </div>
           </a>
-          <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--small">
+          <a
+            href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm"
+            class="promo__glassdoor promo__glassdoor--small"
+            title="Review on Glassdoor"
+          >
             <svg
               viewBox="0 0 204 156"
               fill="currentColor"
@@ -975,7 +983,7 @@
             <div class="footer__privacy">
               <a
                 rel="noopener"
-                href="./privacy-policy/PERSONAL_DATA_PROTECTION_POLICY.pdf"
+                href="./files/PERSONAL_DATA_PROTECTION_POLICY.pdf"
                 class="link"
                 target="_blank"
               >
