--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <div class="col-12 col-md-2">
               <div class="promo__logo">
                 <a href="https://preply.com/" title="Our main web-page">
-                  <img src="./images/logo.png" alt="">
+                  <img src="./images/logo.png" alt="Our logo">
                 </a>
               </div>
             </div>
@@ -75,12 +75,12 @@
                 <img
                   src="./images/promo/glassdoor-logo.png"
                   loading="lazy"
-                  alt=""
+                  alt="Glassdoor logo"
                 >
                 <img
                   src="./images/promo/glassdoor.png"
                   loading="lazy"
-                  alt=""
+                  alt="Glassdoor"
                 >
               </div>
             </div>
@@ -106,8 +106,8 @@
             <div class="promo__glassdoor-inner promo__glassdoor-inner--small">
               <p>Read employees review on:</p>
               <div>
-                <img src="./images/promo/glassdoor-logo-small.png" alt="">
-                <img src="./images/promo/glassdoor-name-small.png" alt="">
+                <img src="./images/promo/glassdoor-logo-small.png" alt="Glassdoor logo">
+                <img src="./images/promo/glassdoor-name-small.png" alt="Glassdoor">
               </div>
             </div>
           </a>
@@ -132,7 +132,7 @@
 
           <img
             src="./images/slogan/slogan_1.svg"
-            alt="power"
+            alt="Power"
             loading="lazy"
             class="slogan__img js-scroll__element scroll scroll__img col-xl-5 col-lg-12"
           >
@@ -161,7 +161,7 @@
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/1.png"
-                    alt="Proply logo"
+                    alt="Preply logo"
                     loading="lazy"
                     class="people-behind__img"
                   >
@@ -172,7 +172,7 @@
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/2.png"
-                    alt="Proply team"
+                    alt="Preply team"
                     loading="lazy"
                     class="people-behind__img"
                   >
@@ -183,7 +183,7 @@
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/3.png"
-                    alt="Proply team"
+                    alt="Preply team"
                     loading="lazy"
                     class="people-behind__img"
                   >
@@ -194,7 +194,7 @@
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/4.png"
-                    alt="Proply team"
+                    alt="Preply team"
                     loading="lazy"
                     class="people-behind__img"
                   >
@@ -205,7 +205,7 @@
                 <div class="people-behind__img-wrp js-scroll__element scroll">
                   <img
                     src="./images/peopleBehind/5.png"
-                    alt="Proply team"
+                    alt="Preply team"
                     loading="lazy"
                     class="people-behind__img"
                   >
@@ -239,7 +239,7 @@
               <div class="value__main">
                 <img
                   class="value__image"
-                  alt="customer first"
+                  alt="Customer first"
                   src="images/values/customer_first.svg"
                 >
                 </img>
@@ -269,7 +269,7 @@
               <div class="value__main">
                 <img
                   class="value__image"
-                  alt="human"
+                  alt="Human"
                   src="images/values/human.svg"
                 >
                 </img>
@@ -299,7 +299,7 @@
               <div class="value__main">
                 <img
                   class="value__image"
-                  alt="hackers"
+                  alt="Hackers"
                   src="images/values/hackers.svg"
                 >
                 </img>
@@ -329,7 +329,7 @@
               <div class="value__main">
                 <img
                   class="value__image"
-                  alt="hungry"
+                  alt="Hungry"
                   src="images/values/hungry.svg"
                 >
                 </img>
@@ -359,7 +359,7 @@
               <div class="value__main">
                 <img
                   class="value__image"
-                  alt="humble"
+                  alt="Humble"
                   src="images/values/humble.svg"
                 >
                 </img>
@@ -390,7 +390,7 @@
 
                 <img
                   class="value__image"
-                  alt="curious"
+                  alt="Curious"
                   src="images/values/curious.svg"
                 >
                 </img>
@@ -432,7 +432,7 @@
 
           <img
             src="./images/slogan/slogan_2.svg"
-            alt="partnership"
+            alt="Partnership"
             loading="lazy"
             class="slogan__img offset-xl-1 col-xl-5 col-lg-12 js-scroll__element scroll"
           >
@@ -639,7 +639,7 @@
             <div class="perks__perk perk js-scroll__element scroll">
               <div class="perk__image-wrapper perk__image-wrapper--light">
                 <img
-                  alt="study"
+                  alt="Study"
                   src="images/perks/Study.svg"
                   class="perk__image"
                 >
@@ -662,7 +662,7 @@
             <div class="perks__perk perk js-scroll__element scroll">
               <div class="perk__image-wrapper perk__image-wrapper--dark">
                 <img
-                  alt="stock"
+                  alt="Stock"
                   src="images/perks/Stock.svg"
                   class="perk__image"
                 >
@@ -685,7 +685,7 @@
             <div class="perks__perk perk js-scroll__element scroll">
               <div class="perk__image-wrapper perk__image-wrapper--light">
                 <img
-                  alt="insurance"
+                  alt="Insurance"
                   src="images/perks/Insurance.svg"
                   loading="lazy"
                   class="perk__image"
@@ -709,7 +709,7 @@
             <div class="perks__perk perk js-scroll__element scroll">
               <div class="perk__image-wrapper perk__image-wrapper--dark">
                 <img
-                  alt="location"
+                  alt="Location"
                   src="images/perks/Location.svg"
                   loading="lazy"
                   class="perk__image"
@@ -733,7 +733,7 @@
             <div class="perks__perk perk js-scroll__element scroll">
               <div class="perk__image-wrapper perk__image-wrapper--light">
                 <img
-                  alt="equipment"
+                  alt="Equipment"
                   src="images/perks/Equipment.svg"
                   loading="lazy"
                   class="perk__image"
@@ -757,7 +757,7 @@
             <div class="perks__perk perk js-scroll__element scroll">
               <div class="perk__image-wrapper perk__image-wrapper--dark">
                 <img
-                  alt="holidays"
+                  alt="Holidays"
                   src="images/perks/Holidays.svg"
                   loading="lazy"
                   class="perk__image"
@@ -909,7 +909,7 @@
           <div class="offset-xl-2 col-xl-5 col-lg-12">
             <img
               src="./images/slogan/slogan_3.svg"
-              alt="learning"
+              alt="Learning"
               loading="lazy"
               class="slogan__img js-scroll__element scroll"
             >
@@ -927,7 +927,7 @@
               class="footer__logo"
               title="Our main web-page"
             >
-              <img src="./images/logo.png" alt="">
+              <img src="./images/logo.png" alt="Logo">
             </a>
           </div>
           <div class="offset-2 col-6 offset-lg-7 col-lg-3">
