change some text due to preply review

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
               ></path>
             </svg>
             <div class="promo__glassdoor-inner promo__glassdoor-inner--big">
-              <p>Read employees review on:</p>
+              <p>Read company reviews on:</p>
               <div>
                 <img
                   src="./images/promo/glassdoor-logo.png"
@@ -104,7 +104,7 @@
               ></ellipse>
             </svg>
             <div class="promo__glassdoor-inner promo__glassdoor-inner--small">
-              <p>Read employees review on:</p>
+              <p>Read company reviews on:</p>
               <div>
                 <img src="./images/promo/glassdoor-logo-small.png" alt="Glassdoor logo">
                 <img src="./images/promo/glassdoor-name-small.png" alt="Glassdoor">
@@ -421,7 +421,7 @@
           <div class="col-xl-5 col-lg-12">
             <div class="slogan__text">
               <h2 class="slogan__title js-scroll__element scroll">
-                Work with us
+                Join our team
               </h2>
 
               <p class="slogan__description js-scroll__element scroll">
